# equus

./: .pre-commit-config.yaml  LICENSE  README.md  __init__.py  data.py  edit.py  generate.py  iso.py  mol3d.py  normalize.py  pyproject.toml  requirements.txt  setup.cfg  xyz_parser.py
edit/: README.md  __init__.py  data.py  generate.py  normalize.py  utils.py
equus/backbone/: README.md  __init__.py  add_group.py  breakage.py  oxidation.py  pseudo_diffusion.py  reduction.py  replace_atom.py  sf_tokens.txt  utils.py
equus/diamine/: __init__.py  data.py  generate.py  iso.py  normalize.py  utils.py
equus/edit/: README.md  __init__.py  data.py  generate.py  iso.py  normalize.py  utils.py
equus/scaffolds/: README.md  __init__.py  breakage.py  oxidation.py  reduction.py  sf_tokens.py  utils.py
equus/xyz/: README.md  __init__.py  mol3d.py
xyz/: README.md  mol3d.py  xyz_parser.py
