[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "equus"
version = "0.1.0"
description = "Package for diamines"
readme = "README.md"
authors = [
    { name = "Yiwen Wang", email = "yiwenwang9702@gmail.com" }
]
license = {file = "LICENSE"}

dependencies = [
    "networkx>=3.3",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.3",
    "pillow>=9.4.0",
    "pytz>=2024.1",
    "rdkit>=2024.3.1",
    "scipy>=1.14.0",
    "tzdata==2024.1"
]

[project.urls]
"Homepage" = "https://github.com/yiwenwang47/equus"
