[metadata]
name = equus
version = 0.1.0
description = Package for diamines
author = Yiwen Wang
author_email = yiwenwang9702@gmail.com
license = MIT
url = https://github.com/yiwenwang47/equus

[options]
packages = find:
install_requires =
    networkx==3.3
    numpy>=1.24.0, <2.0.0
    pandas>=2.0.0
    pillow>=9.4.0
    python-dateutil==2.9.0.post0
    pytz>=2024.1
    rdkit==2024.3.1
    scipy>=1.11.0
    selfies==2.1.1
    six==1.16.0
    tzdata==2024.1
